# REPOSITORY-1

Docker/: unix-build.sh  unix-run.sh  win-build.bat  win-run.bat
Docker/Docker/: Dockerfile  Dockerfile.lite  Instructions.md  makefile
ESERCITAZIONE1/: CMakelists.txt  media  media.cpp  primo  primo.cpp
ESERCITAZIONE1/build_esercitazione1/: CMakeCache.txt  Makefile  cmake_install.cmake  media  primo
ESERCITAZIONE2/: es2  es2.cpp  es2b  es2b.cpp
ESERCITAZIONE_4/: CMakeLists.txt  measure_sorts.cpp  sort.hpp  test_bubblesort.cpp  test_insertionsort.cpp
esercitazione5/: CMakeLists.txt  deduzioni esercitazione5.txt  main5.cpp  measure_sort.cpp  sort.hpp  test_bubblesort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  graph.hpp  main.cpp
